--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ rvm:
 - 2.2.1
 - 2.0.0
 before_install: gem install bundler -v 1.11.2
+addons:
+    code_climate:
+        repo_token: 42c1fda9afbf62c60e0817596a51d2861f2bfe7e162fcf5c5fd0267e686ecd57
